--- a/src/main/resources/static/css/cadastro.css
+++ b/src/main/resources/static/css/cadastro.css
@@ -1,6 +1,7 @@
 :root {
   --fundo: #f7f9fb;
-  --principal: #f4d03f;
+  --principal: #fcec74;
+  --destaque: #fcec74;
   --texto: #1f2933;
   --suave: #7d8a93;
   --cartao: #fff;
@@ -63,9 +64,6 @@ body {
   margin-bottom: 25px;
 }
 
-/* =========================================
-   FORMULÁRIO
-========================================= */
 form {
   display: flex;
   flex-direction: column;
@@ -102,9 +100,6 @@ button:hover {
   transform: translateY(-2px);
 }
 
-/* =========================================
-   LINK
-========================================= */
 .link {
   color: var(--texto);
   text-decoration: none;
@@ -117,28 +112,6 @@ button:hover {
   text-decoration: underline;
 }
 
-/* =========================================
-   MODO ESCURO E CONTRASTE
-========================================= */
-body.modo-escuro {
-  --fundo: #1b1b1b;
-  --texto: #f0f0f0;
-  --cartao: #2a2a2a;
-  --suave: #aaa;
-  --principal: #FFE72D;
-}
-
-body.modo-contraste {
-  --fundo: #000;
-  --texto: #fff;
-  --cartao: #000;
-  --principal: #FFE72D;
-  --suave: #fff;
-}
-
-/* =========================================
-   RESPONSIVIDADE
-========================================= */
 @media (max-width: 480px) {
   .cadastro-container {
     padding: 25px;
